# pagecraft

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pagecraft/: __init__.py  alchemy.py  base.py  page.py  pagecraft.py
tests/: test.py
