[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pagecraft"
version = "0.0.6"
authors = [
  {name="Raul Cobiellas",email="raulodev@gmail.com"},
]
description = "Powerful package and easy to use that simplifies the creation of pagination in your apps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raulodev/pagecraft"
"Bug Tracker" = "https://github.com/raulodev/pagecraft/issues"